# svelte-tpl

./: .gitignore  .prettierignore  components.json  eslint.config.js  index.html  jsconfig.json  lefthook.yaml  mise-api.toml  mise.toml  package.json  pnpm-lock.yaml  postcss.config.js  prettier.config.js  pyproject.toml  readme.md  tailwind.config.js  vite.config.js
.cursor/rules/: naming.md
api/: main.py
src/: App.svelte  Home.svelte  globals.d.ts  main.js  store.js  stores.svelte.js
src/components/: api-showcase.svelte  demo-showcase.svelte  footer.svelte
src/components/feature/: feature-card.svelte  features.svelte
src/components/hero/: hero-cta.svelte  hero.svelte
src/components/nav/: nav-links.svelte  nav.svelte
src/css/: base.css  tailwind.css
src/lib/components/ui/button/: button.svelte  index.js
src/lib/components/ui/card/: card-action.svelte  card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte
src/lib/components/ui/dialog/: dialog-close.svelte  dialog-content.svelte  dialog-description.svelte  dialog-footer.svelte  dialog-header.svelte  dialog-overlay.svelte  dialog-title.svelte  dialog-trigger.svelte  index.js
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/label/: label.svelte
src/lib/components/ui/tabs/: index.js  tabs-content.svelte  tabs-list.svelte  tabs-trigger.svelte  tabs.svelte
src/util/: preinit.js
