[project]
name = "sv-fastapi"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.115.11",
    "rich>=13.9.4",
    "uvicorn>=0.34.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
